--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-/* css
+/* css */
+
+body {
+    min-height: 100vh;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
+}
