--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 /* css */
 
-body {
-    min-height: 100vh;
-}
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
-    width: 100%;
+    align-content: center;
+    max-height: 100vh;
+    max-width: 100vw;
+    gap: 1px;
 }
 
 .square{
-    color:aqua;
+    background-color:aqua;
+    flex: 1 1 30px;   /* starts big and shrinks squares*/
+    aspect-ratio: 1/1; /* keeps them squares */
 }
