--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,23 @@
 /* css */
 
-
+/*flex box for rows*/
 .container {
     display: flex;
-    flex-wrap: wrap;
-    align-content: center;
+    flex-direction: column;
+    align-items: stretch;
     max-height: 100vh;
     max-width: 100vw;
     gap: 1px;
 }
 
+/* flex box for squares in each row*/
+.row {
+    display: flex;
+    gap: 1px
+}
+
 .square{
     background-color:aqua;
-    flex: 1 1 30px;   /* starts big and shrinks squares*/
+    flex: 1 1 30px;  
     aspect-ratio: 1/1; /* keeps them squares */
 }
