Adjust colors of squares and grid
Change grids to be white, then turn black on hover

Change background and border of container to be gray

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     max-height: 100vh;
     max-width: 100vw;
     gap: 1px;
+    border: solid 1px gray;
+    background-color: gray;
 }
 
 /* flex box for squares in each row*/
@@ -17,7 +19,7 @@
 }
 
 .square{
-    background-color:aqua;
+    background-color: white;
     flex: 1 1 1px;  
     aspect-ratio: 1/1; /* keeps them squares */
 }
