--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
     max-width: 100vw;
     gap: 1px;
     border: solid 1px gray;
-    background-color: gray;
 }
 
 /* flex box for squares in each row*/
@@ -19,7 +18,8 @@
 }
 
 .square{
-    background-color: white;
+    background-color: rgb(0, 0, 0);
+    opacity: 0;
     flex: 1 1 1px;  
     aspect-ratio: 1/1; /* keeps them squares */
 }
